[package]
name = "doxygen-bindgen"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["oberrich <oberrich.llvm@proton.me>"]
repository = "https://github.com/oberrich/doxygen-bindgen"
homepage = "https://github.com/oberrich/doxygen-bindgen"
description = "Converts Doxygen comments into Rustdoc markdown"

[dependencies]
yap = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
